--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
     <name>Google LLC</name>
     <url>https://www.google.com/</url>
   </organization>
-
+dependencies {
+  compile 'com.google.apis:google-api-services-youtube:v3-rev20201202-1.31.0'
+}
   <licenses>
     <license>
       <name>Apache-2.0</name>
